Add profile page and questions page

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+
         <link rel="stylesheet" href="css/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -12,9 +13,11 @@
         <link rel="stylesheet" href="css/styles.css">
 
         <link rel="stylesheet" href="css/pushy.css">
+        <link rel="stylesheet" href="css/slider.css">
 
 		<!-- jQuery -->
-        <script src="js/lib/jquery-1.11.0.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-1.11.0.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-barcode-plugin.js"></script>
 
         <title>Congresso</title>
 
@@ -24,7 +27,7 @@
         <script type="text/javascript" src="js/lib/underscore.js"></script>
         <script type="text/javascript" src="js/lib/backbone.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap.js"></script>
-        <script type="text/javascript" src="js/lib/ratchet.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap-slider.js"></script>
         <!-- Libs -->
 
         <script type="text/javascript" src="js/lib/polyglot.js"></script>
@@ -42,6 +45,8 @@
         <script type="text/javascript" src="js/models/user.js"></script>
         <script type="text/javascript" src="js/models/partner.js"></script>
         <script type="text/javascript" src="js/models/activity.js"></script>
+        <script type="text/javascript" src="js/models/category.js"></script>
+        <script type="text/javascript" src="js/models/question.js"></script>
         <!-- Models -->
 
 
@@ -49,6 +54,8 @@
         <script type="text/javascript" src="js/collections/events.js"></script>
         <script type="text/javascript" src="js/collections/partners.js"></script>
         <script type="text/javascript" src="js/collections/activities.js"></script>
+        <script type="text/javascript" src="js/collections/categories.js"></script>
+        <script type="text/javascript" src="js/collections/questions.js"></script>
         <!-- Collections -->
 
         <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
@@ -71,6 +78,13 @@
         <script type="text/javascript" src="js/views/activitiesPage.js"></script>
         <script type="text/javascript" src="js/views/collapsible.js"></script>
         <script type="text/javascript" src="js/views/activityInfo.js"></script>
+        <script type="text/javascript" src="js/views/myProfile.js"></script>
+        <script type="text/javascript" src="js/views/rangeSlader.js"></script>
+        <script type="text/javascript" src="js/views/questionsPage.js"></script>
+        <script type="text/javascript" src="js/views/question.js"></script>
+        <script type="text/javascript" src="js/views/questions.js"></script>
+        <script type="text/javascript" src="js/views/questionsPage.js"></script>
+        <script type="text/javascript" src="js/views/dropdown.js"></script>
         <!-- Views -->
 
         <script type="text/javascript">
