--- a/www/tpl/question-item.html
+++ b/www/tpl/question-item.html
@@ -1,23 +1,13 @@
-<span> Question 1 </span>
-<div class="ui-slider">
-    <input type="number" data-type="range" name="slider" value="50" min="0" max="100" data-highlight="true" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset ui-slider-input">
-    <div role="application" class="ui-slider-track ui-btn-down-c ui-btn-corner-all">
+<div class="container-fluid">
+    <div class="row">
+        <%= question %>
     </div>
-</div>
-<span> Question 2 </span>
-<div class="ui-slider">
-    <input type="number" data-type="range" name="slider" value="50" min="0" max="100" data-highlight="true" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset ui-slider-input">
-    <div role="application" class="ui-slider-track ui-btn-down-c ui-btn-corner-all">
-    </div>
-</div>
-<span> Question 3 </span>
-<div class="ui-slider">
-    <input type="number" data-type="range" name="slider" value="50" min="0" max="100" data-highlight="true" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset ui-slider-input">
-    <div role="application" class="ui-slider-track ui-btn-down-c ui-btn-corner-all">
-    </div>
-</div>
+    <div class="row">
+        <div class="col-xs-10">
 
-<textarea cols="40" rows="20" placeholder="Comment ..."></textarea>
-
-<a href="#" data-transition="pop" data-theme="g" class="ui-shadow ui-btn">Submit</a>
-<!-- Rework -->
+        </div>
+        <div class="col-xs-2">
+            <span class="currentValue"></span>
+        </div>
+    </div>
+</div>
