--- a/www/tpl/collapsible.html
+++ b/www/tpl/collapsible.html
@@ -1,11 +1,11 @@
 <div class="panel-heading">
     <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        <a data-toggle="collapse" data-parent="#accordion">
             <%= name %>
         </a>
     </h4>
 </div>
-<div id="collapseOne" class="panel-collapse collapse in">
+<div class="panel-collapse collapse in">
     <div class="panel-body">
     </div>
 </div>
