--- a/www/tpl/main-layout.html
+++ b/www/tpl/main-layout.html
@@ -4,12 +4,12 @@
 
 <div class="content"></div>
 
-<nav class="bar bar-tab">
+<nav class="navbar navbar-default" role="navigation">
     <a href="#" class="tab-item pull-left"><%= polyglot.t('Menu') %></a>
 
 	<% if(window.App.Auth.isGuest()){ %>
     <a href="#login" class="tab-item pull-right"><%= polyglot.t('Login') %></a>
 	<% } else { %>
-    <a href="#login" class="tab-item pull-right"><%= polyglot.t('My profile') %></a>
+    <a href="#profile" class="tab-item pull-right"><%= polyglot.t('My profile') %></a>
 	<% } %>
 </nav><!-- /footer -->
