--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -2,10 +2,13 @@
     <%= polyglot.t('Login') %>
 </div>
 
-<form id="login-form" class="with-padding bg-green-20 minus-side-margin">
-	<input type="text" id="email" name="email" placeholder="Email"  value="">
-
-	<input type="password" id="password" name="password" placeholder="Password" value="">
+<form role="form" id="login-form" class="with-padding bg-green-20 minus-side-margin">
+    <div class="form-group">
+        <input type="email" name="email" class="form-control input-lg" id="email" placeholder="Email">
+    </div>
+    <div class="form-group">
+        <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password">
+    </div>
 </form>
 
 <a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-lg minus-side-margin"><%= polyglot.t('Submit') %></a>
