--- a/www/tpl/page-partners.html
+++ b/www/tpl/page-partners.html
@@ -1,8 +1,5 @@
-<form class="ui-filterable">
-    <div class="ui-input-search ui-shadow-inset ui-input-has-clear ui-body-inherit ui-corner-all">
-        <input data-type="search" placeholder="Search partner...">
-        <a href="#" class="ui-input-clear ui-btn ui-icon-delete ui-btn-icon-notext ui-corner-all ui-input-clear-hidden" title="Clear text">
-            Clear text
-        </a>
-    </div>
-</form>
+<div class="form-group">
+    <input type="text" class="form-control" id="filter" placeholder="Partner">
+</div>
+
+<!-- Lists -->
