--- a/www/tpl/partner-details.html
+++ b/www/tpl/partner-details.html
@@ -11,7 +11,7 @@
         <p><%= description %></p>
     </div>
 
-    <textarea cols="40" rows="20" placeholder="Comment ..."></textarea>
+    <textarea class="form-control" rows="3" placeholder="Comments ..."></textarea>
 </div>
 
 <a href="#" data-transition="pop" class="ui-btn ui-btn-lg minus-side-margin"><%= polyglot.t('Submit') %></a>
