--- a/www/index.html
+++ b/www/index.html
@@ -6,14 +6,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-
-        <link rel="stylesheet" href="css/normalize.css">
-
         <link rel="stylesheet" href="css/styles.css">
-
-        <link rel="stylesheet" href="css/pushy.css">
-        <link rel="stylesheet" href="css/slider.css">
 
 		<!-- jQuery -->
         <script type="text/javascript" src="js/lib/jquery-1.11.0.js"></script>
@@ -34,6 +27,7 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/router.js"></script>
         <script type="text/javascript" src="js/auth.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
 
 
         <!-- Components -->
@@ -61,11 +55,12 @@
         <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
 
         <!-- Views -->
-        <script type="text/javascript" src="js/views/event.js"></script>
-        <script type="text/javascript" src="js/views/events.js"></script>
-        <script type="text/javascript" src="js/views/eventList.js"></script>
+        <script type="text/javascript" src="js/views/event/event.js"></script>
+        <script type="text/javascript" src="js/views/event/events.js"></script>
+        <script type="text/javascript" src="js/views/event/eventList.js"></script>
+	    <script type="text/javascript" src="js/views/event/eventPage.js"></script>
+
         <script type="text/javascript" src="js/views/layout.js"></script>
-        <script type="text/javascript" src="js/views/eventPage.js"></script>
         <script type="text/javascript" src="js/views/menu.js"></script>
         <script type="text/javascript" src="js/views/login.js"></script>
         <script type="text/javascript" src="js/views/qa.js"></script>
