Add profile page and questions page

--- a/www/tpl/dropdown.html
+++ b/www/tpl/dropdown.html
@@ -1,4 +1,4 @@
 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-    <%= default %> <span class="caret"></span>
+    <%= selected %> <span class="caret"></span>
 </button>
 <ul class="dropdown-menu" role="menu"></ul>
