+ More design for event list. + Some design for layout. + Datetime formatting component added.

--- a/www/index.html
+++ b/www/index.html
@@ -19,16 +19,18 @@
         <!-- Libs -->
         <script type="text/javascript" src="js/lib/underscore.js"></script>
         <script type="text/javascript" src="js/lib/backbone.js"></script>
+        <script type="text/javascript" src="js/lib/moment.min.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap-slider.js"></script>
         <!-- Libs -->
 
+		<!-- Core -->
         <script type="text/javascript" src="js/lib/polyglot.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/router.js"></script>
         <script type="text/javascript" src="js/auth.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
-
+		<!-- Core -->
 
         <!-- Components -->
         <script type="text/javascript" src="js/components/view.js"></script>
