--- a/www/tpl/event-list-item.html
+++ b/www/tpl/event-list-item.html
@@ -1,12 +1,12 @@
 <a href="#events/<%= id %>" style="display: block;">
 	<div class="row">
 	    <div class="col-xs-6">
-		    <h4 class="event-name"><%= eventName %></h4>
+		    <h4 class="event-name"><%= event_name %></h4>
 		    <p class="event-location"><%= location %></p>
 	    </div>
 	    <div class="col-xs-6">
-		    <p class="event-date"><%= startDate %></p>
-		    <p class="event-time"><%= endDate %></p>
+		    <p class="event-date"><%= formatted_date %></p>
+		    <p class="event-time"><%= start_hour %> - <%= end_hour %></p>
 	    </div>
     </div>
 </a>
