--- a/www/tpl/page-event-list.html
+++ b/www/tpl/page-event-list.html
@@ -2,28 +2,26 @@
     <div class="panel panel-default" id="events-previous">
         <div class="panel-heading">
             <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#event-list" href="#events-previous-body">
+                <a class="toggle-handler" data-toggle="collapse" data-parent="#event-list" href="#events-previous-body">
                     <%= polyglot.t('Previous events') %>
                 </a>
             </h4>
         </div>
-        <div id="events-previous-body" class="panel-collapse collapse in">
-            <div class="panel-body panel-list">
-            </div>
+        <div id="events-previous-body" class="panel-collapse collapse">
+            <div class="panel-body panel-list"></div>
         </div>
     </div>
 
     <div class="panel panel-default" id="events-upcoming">
         <div class="panel-heading">
             <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#event-list" href="#events-upcoming-body">
+                <a class="toggle-handler" data-toggle="collapse" data-parent="#event-list" href="#events-upcoming-body">
                     <%= polyglot.t('Upcoming events') %>
                 </a>
             </h4>
         </div>
-        <div id="events-upcoming-body" class="panel-collapse collapse">
-            <div class="panel-body panel-list">
-            </div>
+        <div id="events-upcoming-body" class="panel-collapse collapse in">
+            <div class="panel-body panel-list"></div>
         </div>
     </div>
 </div>
