--- a/www/tpl/page-questions.html
+++ b/www/tpl/page-questions.html
@@ -9,3 +9,10 @@
 <div class="row questions">
 
 </div>
+<div class="partner-body">
+    <textarea class="form-control" rows="3" placeholder="Comments ..."></textarea>
+</div>
+<div class="alert alert-danger">
+    Some danger ...
+</div>
+<a href="#" data-transition="pop" class="ui-btn ui-btn-lg minus-side-margin"><%= polyglot.t('Submit') %></a>
