--- a/www/tpl/menu.html
+++ b/www/tpl/menu.html
@@ -1,6 +1,6 @@
 <ul>
 		<li>
-			<a href="#home">
+			<a href="<%= App.getHomeUrl() %>">
 				<span class="glyphicon glyphicon-home"></span>
 				<%= polyglot.t('Home') %>
 			</a>
