--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -6,13 +6,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-
-        <link rel="stylesheet" href="css/normalize.css">
-
         <link rel="stylesheet" href="css/styles.css">
-
-        <link rel="stylesheet" href="css/pushy.css">
 
 		<!-- jQuery -->
         <script type="text/javascript" src="js/lib/jquery-1.11.0.js"></script>
@@ -25,14 +19,18 @@
         <!-- Libs -->
         <script type="text/javascript" src="js/lib/underscore.js"></script>
         <script type="text/javascript" src="js/lib/backbone.js"></script>
+        <script type="text/javascript" src="js/lib/moment.min.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap-slider.js"></script>
         <!-- Libs -->
 
+		<!-- Core -->
         <script type="text/javascript" src="js/lib/polyglot.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/router.js"></script>
         <script type="text/javascript" src="js/auth.js"></script>
-
+        <script type="text/javascript" src="js/utils.js"></script>
+		<!-- Core -->
 
         <!-- Components -->
         <script type="text/javascript" src="js/components/view.js"></script>
@@ -43,6 +41,8 @@
         <script type="text/javascript" src="js/models/user.js"></script>
         <script type="text/javascript" src="js/models/partner.js"></script>
         <script type="text/javascript" src="js/models/activity.js"></script>
+        <script type="text/javascript" src="js/models/category.js"></script>
+        <script type="text/javascript" src="js/models/question.js"></script>
         <!-- Models -->
 
 
@@ -50,16 +50,19 @@
         <script type="text/javascript" src="js/collections/events.js"></script>
         <script type="text/javascript" src="js/collections/partners.js"></script>
         <script type="text/javascript" src="js/collections/activities.js"></script>
+        <script type="text/javascript" src="js/collections/categories.js"></script>
+        <script type="text/javascript" src="js/collections/questions.js"></script>
         <!-- Collections -->
 
         <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
 
         <!-- Views -->
-        <script type="text/javascript" src="js/views/event.js"></script>
-        <script type="text/javascript" src="js/views/events.js"></script>
-        <script type="text/javascript" src="js/views/eventList.js"></script>
+        <script type="text/javascript" src="js/views/event/event.js"></script>
+        <script type="text/javascript" src="js/views/event/events.js"></script>
+        <script type="text/javascript" src="js/views/event/eventList.js"></script>
+	    <script type="text/javascript" src="js/views/event/eventPage.js"></script>
+
         <script type="text/javascript" src="js/views/layout.js"></script>
-        <script type="text/javascript" src="js/views/eventPage.js"></script>
         <script type="text/javascript" src="js/views/menu.js"></script>
         <script type="text/javascript" src="js/views/login.js"></script>
         <script type="text/javascript" src="js/views/qa.js"></script>
@@ -73,7 +76,12 @@
         <script type="text/javascript" src="js/views/collapsible.js"></script>
         <script type="text/javascript" src="js/views/activityInfo.js"></script>
         <script type="text/javascript" src="js/views/myProfile.js"></script>
+        <script type="text/javascript" src="js/views/rangeSlader.js"></script>
         <script type="text/javascript" src="js/views/questionsPage.js"></script>
+        <script type="text/javascript" src="js/views/question.js"></script>
+        <script type="text/javascript" src="js/views/questions.js"></script>
+        <script type="text/javascript" src="js/views/questionsPage.js"></script>
+        <script type="text/javascript" src="js/views/dropdown.js"></script>
         <!-- Views -->
 
         <script type="text/javascript">
