--- a/platforms/ios/www/tpl/page-questions.html
+++ b/platforms/ios/www/tpl/page-questions.html
@@ -2,18 +2,17 @@
     <div class="col-xs-6">
         <%= polyglot.t('Category') %>
     </div>
-    <div class="col-xs-6">
-        <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                Action <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-            </ul>
-        </div>
+    <div class="col-xs-6 categories">
+
     </div>
 </div>
+<div class="row questions">
+
+</div>
+<div class="partner-body">
+    <textarea class="form-control" rows="3" placeholder="Comments ..."></textarea>
+</div>
+<div class="alert alert-danger">
+    Some danger ...
+</div>
+<a href="#" data-transition="pop" class="ui-btn ui-btn-lg minus-side-margin"><%= polyglot.t('Submit') %></a>
