--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -1,8 +1,9 @@
 <div class="title-bar">
-    <%= polyglot.t('Login') %>
+	Login
 </div>
 
-<div class="alert alert-danger error-message minus-side-margin" style="display: none"></div>
+<form id="login-form" class="with-padding bg-green-20 minus-side-margin">
+	<input type="text" id="email" name="email" placeholder="Email"  value="">
 
 <form role="form" id="login-form" class="with-padding bg-green-20 minus-side-margin">
     <div class="form-group">
