--- a/www/index.html
+++ b/www/index.html
@@ -3,14 +3,15 @@
 <head>
 	<title></title>
 	<script>
-		switch (navigator.language) {
-			case "no":
-				window.location='./main_no.html#/';
-				break;
-			default:
-				window.location='./main_en.html#/';
-				break;
-		}
+		window.location='./main_no.html#/';
+		// switch (navigator.language) {
+		// 	case "no":
+		// 		window.location='./main_no.html#/';
+		// 		break;
+		// 	default:
+		// 		window.location='./main_en.html#/';
+		// 		break;
+		// }
 	</script>
 <body>
 </body>
