--- a/platforms/ios/www/main_no.html
+++ b/platforms/ios/www/main_no.html
@@ -169,6 +169,7 @@
   <div>
     <div>
       <p>~text~</p>
+      <p>~connectMessage~</p>
       <div class="loto" ng-show="loto.number">
         <div class="items" ng-repeat="items in length" ng-style="stylesheet">
           <div class="item" ng-repeat="item in length" ng-style="stylesheet">
