--- a/platforms/wp8/www/index.html
+++ b/platforms/wp8/www/index.html
@@ -3,7 +3,15 @@
 <head>
 	<title></title>
 	<script>
-		window.location='./main.html#/';
+		window.location='./main_no.html#/';
+		// switch (navigator.language) {
+		// 	case "no":
+		// 		window.location='./main_no.html#/';
+		// 		break;
+		// 	default:
+		// 		window.location='./main_en.html#/';
+		// 		break;
+		// }
 	</script>
 <body>
 </body>
